[gd_scene load_steps=12 format=3 uid="uid://dc8h4bv08j15b"]

[ext_resource type="Script" path="res://main.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://t7osl7fthyhv" path="res://CraftingGUI.png" id="2"]
[ext_resource type="Texture2D" uid="uid://r4e5hjfm3l8s" path="res://Xsymbol.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dfmfbfquc5b65" path="res://block.png" id="4"]
[ext_resource type="Texture2D" uid="uid://b1r7yai5l0vwy" path="res://ender_eye.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bq8j4s3py561p" path="res://music_disc_5.png" id="6"]
[ext_resource type="AudioStream" uid="uid://csg5cnvdmxr35" path="res://mrstheme.mp3" id="7"]
[ext_resource type="Script" path="res://TitleBar.gd" id="8"]

[sub_resource type="Animation" id="Animation_4fs5i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ahlkd"]
resource_name = "start"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q6noi"]
_data = {
"RESET": SubResource("Animation_4fs5i"),
"start": SubResource("Animation_ahlkd")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1")

[node name="CraftingGrid" type="Sprite2D" parent="."]
position = Vector2(512, 264)
scale = Vector2(4, 3.963)
texture = ExtResource("2")
metadata/_edit_lock_ = true

[node name="Button1" type="TextureButton" parent="."]
offset_left = 60.0
offset_top = 61.0
offset_right = 180.0
offset_bottom = 181.0
ignore_texture_size = true
stretch_mode = 0

[node name="Button2" type="TextureButton" parent="."]
offset_left = 204.0
offset_top = 61.0
offset_right = 324.0
offset_bottom = 181.0
ignore_texture_size = true
stretch_mode = 0

[node name="Button3" type="TextureButton" parent="."]
offset_left = 348.0
offset_top = 61.0
offset_right = 468.0
offset_bottom = 181.0
ignore_texture_size = true
stretch_mode = 0

[node name="Button4" type="TextureButton" parent="."]
offset_left = 60.0
offset_top = 204.0
offset_right = 180.0
offset_bottom = 324.0
ignore_texture_size = true
stretch_mode = 0

[node name="Button5" type="TextureButton" parent="."]
offset_left = 204.0
offset_top = 204.0
offset_right = 324.0
offset_bottom = 324.0
ignore_texture_size = true
stretch_mode = 0

[node name="Button6" type="TextureButton" parent="."]
offset_left = 348.0
offset_top = 204.0
offset_right = 468.0
offset_bottom = 324.0
ignore_texture_size = true
stretch_mode = 0

[node name="Button7" type="TextureButton" parent="."]
offset_left = 60.0
offset_top = 346.0
offset_right = 180.0
offset_bottom = 466.0
ignore_texture_size = true
stretch_mode = 0

[node name="Button8" type="TextureButton" parent="."]
offset_left = 204.0
offset_top = 346.0
offset_right = 324.0
offset_bottom = 466.0
ignore_texture_size = true
stretch_mode = 0

[node name="Button9" type="TextureButton" parent="."]
offset_left = 348.0
offset_top = 346.0
offset_right = 468.0
offset_bottom = 466.0
ignore_texture_size = true
stretch_mode = 0

[node name="Button10" type="TextureButton" parent="."]
offset_left = 792.0
offset_top = 185.0
offset_right = 952.0
offset_bottom = 345.0
ignore_texture_size = true
stretch_mode = 0

[node name="LeaveButton" type="TextureButton" parent="."]
offset_left = 876.0
offset_top = 36.0
offset_right = 976.0
offset_bottom = 136.0
texture_normal = ExtResource("3")
ignore_texture_size = true
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="BlockButton" type="TextureButton" parent="."]
offset_left = 876.0
offset_top = 392.0
offset_right = 976.0
offset_bottom = 492.0
texture_normal = ExtResource("4")
ignore_texture_size = true
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="ShootButton" type="TextureButton" parent="."]
offset_left = 768.0
offset_top = 36.0
offset_right = 868.0
offset_bottom = 136.0
texture_normal = ExtResource("5")
ignore_texture_size = true
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="MusicButton" type="TextureButton" parent="."]
offset_left = 768.0
offset_top = 388.0
offset_right = 868.0
offset_bottom = 488.0
texture_normal = ExtResource("6")
ignore_texture_size = true
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(768, 385)
stream = ExtResource("7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AudioStreamPlayer2D"]
libraries = {
"": SubResource("AnimationLibrary_q6noi")
}

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(391, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.webp", "*.jpg", "*.tiff", "*.jpeg", "*.bmp")
use_native_dialog = true

[node name="SaveDialog" type="FileDialog" parent="."]
initial_position = 1
size = Vector2i(452, 400)
ok_button_text = "Save"
access = 2
filters = PackedStringArray("*.png")
use_native_dialog = true

[node name="BlockDialog" type="FileDialog" parent="."]
initial_position = 1
size = Vector2i(452, 400)
ok_button_text = "Save"
access = 2
filters = PackedStringArray("*.png")
use_native_dialog = true

[node name="BlockImageDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg", "*.jpeg", "*.webp", "*.tiff", "*.bmp")
use_native_dialog = true

[node name="TitleBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -3.0
offset_top = 2.0
offset_right = 1020.0
offset_bottom = 32.0
script = ExtResource("8")
metadata/_edit_lock_ = true

[connection signal="gui_input" from="Button1" to="." method="_on_button_1_gui_input"]
[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="gui_input" from="Button2" to="." method="_on_button_2_gui_input"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="gui_input" from="Button3" to="." method="_on_button_3_gui_input"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="gui_input" from="Button4" to="." method="_on_button_4_gui_input"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="gui_input" from="Button5" to="." method="_on_button_5_gui_input"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="gui_input" from="Button6" to="." method="_on_button_6_gui_input"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
[connection signal="gui_input" from="Button7" to="." method="_on_button_7_gui_input"]
[connection signal="pressed" from="Button7" to="." method="_on_button_7_pressed"]
[connection signal="gui_input" from="Button8" to="." method="_on_button_8_gui_input"]
[connection signal="pressed" from="Button8" to="." method="_on_button_8_pressed"]
[connection signal="gui_input" from="Button9" to="." method="_on_button_9_gui_input"]
[connection signal="pressed" from="Button9" to="." method="_on_button_9_pressed"]
[connection signal="gui_input" from="Button10" to="." method="_on_button_10_gui_input"]
[connection signal="pressed" from="Button10" to="." method="_on_button_10_pressed"]
[connection signal="pressed" from="LeaveButton" to="." method="_on_leave_button_pressed"]
[connection signal="pressed" from="BlockButton" to="." method="_on_block_button_pressed"]
[connection signal="pressed" from="ShootButton" to="." method="_on_shoot_button_pressed"]
[connection signal="pressed" from="MusicButton" to="." method="_on_music_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_save_dialog_file_selected"]
[connection signal="file_selected" from="BlockDialog" to="." method="_on_block_dialog_file_selected"]
[connection signal="file_selected" from="BlockImageDialog" to="." method="_on_block_image_dialog_file_selected"]
[connection signal="gui_input" from="TitleBar" to="TitleBar" method="_on_gui_input"]
